storage/minIO/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: minio
  namespace: store
  labels:
    app: minio

spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      # We only deploy minio to nodes specified as a minio server. 
      # The label is applied to nodes using `kubectl label node hostname1 -l minio-server=true`
      nodeSelector:
        minio-server: "true"
      hostNetwork: true
      
      # The storage is provided using a hostPath, which must be the same on all servers.
      volumes:
      - name: storage
        hostPath:
          path: /ext/storage/object-storage/

      containers:
      - name: minio
        image: minio/minio:RELEASE.2020-09-10T22-02-45Z
        
        # Servers must be manually defined.
        args:
        - server
        - http://storage{1...4}.example.com/data/minio
        
        ports:
        - containerPort: 9000
        
        volumeMounts:
        - name: storage
          mountPath: /data/minio/
