storage/minIO/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-storage
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio
