storage/minIO/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: object-storage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "800m"
    nginx.ingress.kubernetes.io/proxy-body-size: "800m"
    certmanager.k8s.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - storage.example.com
    secretName: object-storage-tls
  rules:
  - host: storage.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: object-storage
          servicePort: 9000
